# ECE4010_Project

./: .env.example  .gitignore  README.md  pyproject.toml
data/: bundles.json  config.mock.yaml  config.sample.yaml  config.triage.enforce.yaml  config.triage.yaml  learners.json  tasks.jsonl
docs/: API_THREE_RUN_SUMMARY.md  ARCHITECTURE.md  POST_REPLANNING_TEST_SUMMARY.md
docs/ppt_materials/: architecture_for_ppt.md  architecture_mermaid.md  cases_for_ppt.json  cases_for_ppt.md  experiment_design_for_ppt.md  gru_summary_for_ppt.md  limitations_and_future_work.md  mode_comparison_mermaid.md  ppt_outline_11_pages.md  ppt_support_summary.md  results_analysis.md  results_main_table.csv  results_main_table.md
src/adaptive_tutor/: __init__.py  __main__.py  cli.py  evaluation.py  feedback.py  io_utils.py  modeling.py  next_task.py  planning.py  prompts.py  reporting.py  runner.py  schemas.py  triage.py  triage_training.py  utils.py
src/adaptive_tutor/backends/: __init__.py  base.py  mock_backend.py  openai_backend.py
tests/: test_evaluation.py  test_integration_runner.py  test_modeling.py  test_openai_backend.py  test_schemas_and_config.py  test_triage.py  test_utils.py
